--- a/style.css
+++ b/style.css
@@ -57,15 +57,20 @@ img{
 @media only screen and (min-width:1200px){
   .avatar{
     grid-column:1/2;
+    grid-row:span 2;
   }
 
   .avatartext{
     grid-column:2/3;
+    align-self:bottom;
     justify-self:left;
+    
   }
 
  .user{
-   grid-column:span 2;
+   grid-column:2/3;
+   grid-row:3/4;
+   justify-self:left;
  }
 
  #input{
